# ChangeLog for x11-libs/pango
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.314 2011/03/22 19:50:35 ranger Exp $

  22 Mar 2011; Brent Baude <ranger@gentoo.org> pango-1.28.3.ebuild:
  Marking pango-1.28.3 ppc stable for bug 353436

  19 Mar 2011; Pacho Ramos <pacho@gentoo.org> pango-1.28.3-r1.ebuild:
  Needs >=dev-libs/glib-2.24 due g_malloc0_n usage (bug #359425 by Daniel
  Díaz).

  18 Mar 2011; Raúl Porcel <armin76@gentoo.org> pango-1.28.3-r1.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #352087

  18 Mar 2011; Jonathan Callen <abcd@gentoo.org> pango-1.28.3-r1.ebuild:
  Merge prefix changes from overlay, add prefix keywords

  15 Mar 2011; Jeroen Roovers <jer@gentoo.org> pango-1.28.3-r1.ebuild:
  Stable for HPPA (bug #352087).

  14 Mar 2011; Markos Chandras <hwoarang@gentoo.org> pango-1.28.3-r1.ebuild:
  Stable on amd64 wrt bug #352087

  13 Mar 2011; Tobias Klausmann <klausman@gentoo.org> pango-1.28.3-r1.ebuild:
  Stable on alpha, bug #352087

  13 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
  pango-1.28.3-r1.ebuild:
  stable x86, security bug 352087

  13 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> pango-1.28.3-r1.ebuild:
  ppc/ppc64 stable wrt #352087

  12 Mar 2011; Pacho Ramos <pacho@gentoo.org>
  -files/pango-1.26.0-fix-parallel-build.patch:
  Clean old.

*pango-1.28.3-r1 (12 Mar 2011)

  12 Mar 2011; Pacho Ramos <pacho@gentoo.org> -files/pango-1.2.5-lib64.patch,
  -pango-1.24.5-r1.ebuild, -files/pango-1.26.0-introspection-automagic.patch,
  -pango-1.26.2.ebuild, +pango-1.28.3-r1.ebuild,
  +files/pango-1.28.3-heap-corruption.patch,
  +files/pango-1.28.3-malloc-failure.patch:
  Fix security issues: CVE-2011-0020 and CVE-2011-0064. Remove old.

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> pango-1.28.3.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #348987

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> pango-1.28.3.ebuild:
  Stable for HPPA (bug #348987).