@@ -1,10 +1,32 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX pango-1.26.0-lib64.patch 499 RMD160 0056b738ff517c2b1eb1a6b8e8173d91af0ebeaf SHA1 d514148e6ffced2b4f350abe25cd41282dbb3aae SHA256 1bb2671d49c54caf70e9df104ca26af4e76a536db14150a472b093d05d9f6347
 AUX pango-1.28.3-heap-corruption.patch 1554 RMD160 a18ea9747315f936ce5067c84c969eb221d54c3d SHA1 e287ff68f2e430d4b5b54a22f9418eb44d580642 SHA256 5973c66fcae43d5ba9cd55b966f79fd265ae6068d817ff0a0857e2e20093787d
 AUX pango-1.28.3-malloc-failure.patch 6282 RMD160 5161f148cc68b35863ad846bb5bf208509e2b82f SHA1 43d5bcfc1df3e5651c3e4f3804e386e69a57d654 SHA256 6838d7a2aaf81b1434135254f6309e82f9b09292a6d5b00eb0f336e020b825cb
 DIST pango-1.28.1.tar.bz2 1483961 RMD160 04531a54148a22dfcf7f3060501a0126f701ee18 SHA1 2d5907f0ff108cb9c27f69d8e4de564ff3d30221 SHA256 8f3eaab506f613dd25bb1fa65ea87a145d523d066d90c227bdb3016523451bc2
 DIST pango-1.28.3.tar.bz2 1509501 RMD160 cdfd6d695b169e15801956fbfd54438c109f7a61 SHA1 e72887d6e147b9abf54628c003836e61d97767a1 SHA256 5e278bc9430cc7bb00270f183360d262c5006b51248e8b537ea904573f200632
+DIST pango-1.28.4.tar.bz2 1503441 RMD160 e9dc19b62263fdbd5b58c00092220af87ed929df SHA1 e715954a5a3b358889d15b6235e1965303dbb622 SHA256 7eb035bcc10dd01569a214d5e2bc3437de95d9ac1cfa9f50035a687c45f05a9f
 EBUILD pango-1.28.1.ebuild 1934 RMD160 a7ece8083c7bef285a4c4d7d971e237efa099b2b SHA1 fdddcdd729f8752e4ecff7952064f1c51aaa621c SHA256 dbdc2360e95c760fe05bbb35677078f5a2e3f716fdf5cb08309afa11a3545f90
 EBUILD pango-1.28.3-r1.ebuild 2597 RMD160 4297f20432da43a62fe20260e645783575de57e0 SHA1 94b5384023256d77dc14bb01d7dbeb48bd7f8cbc SHA256 5834d1f33837b7eb43d9a0ab6eb79f9180d50205879f93b6cb1e3b3382579cd7
 EBUILD pango-1.28.3.ebuild 2052 RMD160 d7dc94789a01fbeef7c2fbe0c77aac0e17e6714e SHA1 4d9e82629154a28d33189b04602621fc915f026a SHA256 4f12f900bb5cf6c6d6c7741e8f42946f4bafc9670347de1b7b24978e706efe47
-MISC ChangeLog 39269 RMD160 370ba7405b975206ae01c63b790581e754cf4f71 SHA1 d83cf7ab6ddfd517fecbb568d99e4e7889aed6f3 SHA256 08f9be58e59f73e33645912bb8cb1879ed3b5fefbae8def7fa98c90a175a957c
+EBUILD pango-1.28.4.ebuild 2353 RMD160 01cda4852ebfcff804b0d46d8738c5f36a2482c9 SHA1 3b436a6c890c6aba6b9c1bed1837c123c97c96ad SHA256 7fc560c40611bcaeaaa11a1af1184c3ffcc5bc99e3d918070460a8e5f5db5646
+MISC ChangeLog 39412 RMD160 5d084c2952f5de98e2f60c47832dd29630088e42 SHA1 566de00d4fb15406a6da3a30b54615d47530b858 SHA256 a008bc8bfbec953eedaec6eee6fd7b79d243f18f3c2c9a4e3577ee24a66a46f2
 MISC metadata.xml 272 RMD160 94ca2c5330dafece28a4cd39f8c53c0926c72b58 SHA1 0594029445efc117f85d07402cacb33f063a8198 SHA256 d6cd612b3d4d224cec4189a81e42dc98ba6fd96ce241908b57491d78f99e6314
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNmjcEAAoJEO/kOhxWD91kGHMQAKu50d3kZltfMwKV9wB9Q+NH
+ExSKn3/iRFagyFJS7zdXZDwyEBGzahYSwpq+uTUbACsJuWwqIROBZcj2JmC/8cst
+eg6ZtzH0/6ZpkRpKGapnAkTtcuVhirxBS2Y4b9DI8shQQbkEYi3vTu1ySl8ro7wj
+rbL3sy/91llqEC1ciIJzbvSMfJUmEdhVqeuBa7WPPuOAP4H+ANrrH+qDqW5b7nnK
+oBk1zabd6ZL2WwWwX8y7MzoP/TCqupxvwYk1y5iP6+HuGHHP9ilpztf4aFU7AtJ8
+pleRq6fBoxRec6K7nTaYQ9zz/tQBQIBTtahBw7/nmSLoRhjyQP/rCSqaqE/iS8RZ
+/U/PV8p85vHCHgu4Hw/pUok0+nkX0Y8+IyPtDidnOgGMmwgLtOBVj4y0w/Azv4fv
+Y5657NXCtXG6IpkVIPqU8e1HBPrEmMtA7daFjRYOzv0bfCRu47uRNyeRr6Fc747S
+ozNO1K8141zbzyeSGdLbFAzJe9mpAxREVD42fjxN4G9C+nsBQVI+OcVcZt4WLUw5
+50aRY4xqYC8P1tR4tHoBUgNCi3oNov8BFHQke87NdFgSuky317vcUD5v6xEXJi7q
+WKx6B8oMOeB6JVtdUGORXKuHoqYtasH1bfZGecul2gKJwqbl2E75w8/6ij0J2E4B
+SukKe6ldeSPlHJSV/Qdt
+=yeNh
+-----END PGP SIGNATURE-----
